--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ Espera un momento mis amores...
 
 <div class="grid--item">
 <div class="single-image">
-<img alt="Single Image" src="img/0802(3).jpg">
+<img alt="Single Image" src="img/0802(3).JPG">
 </div>
 </div>
 
